--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 config.py
+.DS_Store
+home/.DS_Store
+home/templates/.DS_Store
+propertyView/.DS_Store
+propertyView/templates/.DS_Store
 
 # C extensions
 *.so
